# routes/router.go
@@ -21,7 +21,7 @@ func SetupRouter() *gin.Engine {
 
 	api := handlers.NewAPIHandler()
 	router.POST("/accounts", api.CreateAccount)
-	router.POST("/accounts/:accountId/installments/:planId/pay", api.PayInstallment)
+	router.POST("/accounts/:accountId/installments/:planId/next", api.PostNextInstallment)
 	router.GET("/accounts/:accountId", api.GetAccount)
 	router.POST("/transactions", api.CreateTransaction)
 
